welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:41: error: not found: value T
      setCouleurBrosse(T((i+decalage)%getMondeHauteur()))
                       ^Array2:46: error: not found: value isFaceMur
  } while (!isFaceMur)
            ^